:hammer: core/annotation